[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
categories = ["command-line-utilities"]
description = "Utility for launching applications or focusing their windows"
keywords = [
    "utility",
    "launcher",
    "x11",
    "window-management",
]
license = "GPL-3.0"
name = "run-or-raise"
readme = "README.md"
homepage = "https://soft.github.io/run-or-raise/"
repository = "https://github.com/Soft/run-or-raise"
version = "0.3.2"
exclude = ["_config.yml"]
edition = "2018"

[badges.travis-ci]
repository = "Soft/run-or-raise"

[dependencies]
encoding = "0.2.33"
failure = "0.1.3"
lazy_static = "1.2.0"
nom = "3.2.1"
regex = "1.1.0"
termion = "1.5.1"
xcb = "0.8.2"

[profile.release]
lto = true
panic = "abort"
