[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
categories = ["command-line-utilities"]
description = "Utility for launching applications or focusing their windows"
keywords = [
    "utility",
    "launcher",
    "x11",
    "window-management",
]
license = "GPL-3.0"
name = "run-or-raise"
readme = "README.md"
homepage = "https://soft.github.io/run-or-raise/"
repository = "https://github.com/Soft/run-or-raise"
version = "0.3.4"
exclude = ["_config.yml"]
edition = "2021"

[badges.travis-ci]
repository = "Soft/run-or-raise"

[dependencies]
encoding = "0.2"
anyhow = "1"
lazy_static = "1.4"
nom = "7"
regex = "1.5"
xcb = "0.10"

[profile.release]
lto = true
panic = "abort"
